--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-title: Minimal theme
+title: Bioinformed
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: Exploring biology computationally
 show_downloads: true
-google_analytics:
 theme: jekyll-theme-minimal
