--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ logo: /assets/img/logo.png
 description: Exploring biology computationally
 show_downloads: true
 theme: jekyll-theme-minimal
+mathjax: true
